Refactor tests: imports, Mockito, and assertions
Clean up and modernize unit tests across multiple files: remove unused/obsolete imports and @ExtendWith, drop unnecessary 'throws Exception' declarations, replace URL constructions with URI.create(...).toURL(), switch Mockito any() usages to typed ArgumentMatchers where needed, simplify when(...) argument matching by passing direct objects instead of eq(...), and update AssertJ assertions (use isZero() and chained contains()). These changes fix compilation warnings, improve type-safety with Mockito, and standardize test code style.